[workspace]
members = [
    "raw-nodes",
    "schema",
    "server",
    "ui",
    "utils",
    "utils-client",
    "settings-derive",
    "client",
]

[workspace.package]
version = "1.8.2"
edition = "2024"

[package]
name = "arena-of-ideas"
version.workspace = true
edition.workspace = true

[features]
dynamic_linking = ["client/dynamic_linking"]


[workspace.dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_audio",
    "vorbis",
    "multi_threaded",
    "file_watcher",
    "bevy_ui",
    "default_font",
    "x11",
    "bevy_state",
    "bevy_log",
] }
spacetimedb = { version = "1.2.0" }
spacetimedb-sdk = "1.2.0"
spacetimedb-sats = "1.2.0"
spacetimedb-lib = "1.2.0"
strum = "0.26.2"
strum_macros = "0.26.2"
itertools = "0.12.1"
ron = "0.8.0"
serde = "1"
serde_json = "1.0.104"
include_dir = "0.7.4"
thiserror = "2.0.3"
convert_case = "0.7.1"
bevy-trait-query = "0.7.0"
once_cell = "1.19.0"
bevy_egui = { version = "0.34.1", default-features = false, features = [
    "serde",
    "open_url",
    "render",
    "immutable_ctx",
] }
ecolor = { version = "0.31.0", features = ["color-hex", "serde"] }
lerp = "0.5.0"
indexmap = { version = "2.6.0", features = ["serde"] }
colored = "2.0.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "alloc",
    "std",
    "now",
] }
egui_extras = { version = "0.31.0", features = ["svg"] }
egui-notify = "0.19.0"
egui_tiles = "0.12.0"
humanize-duration = "0.0.6"
parking_lot = "0.12.3"
syn = "2.0.89"
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
prettyplease = "0.2"
tween = "2.0.1"
arboard = "3.4.1"
log = "0.4.19"
glam = { version = "0.29.2", features = ["serde"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
color-hex = "0.2.0"

egui_double_slider = "0.7.0"
bimap = { version = "0.6.3", features = ["serde"] }
backtrace = "0.3.74"
mlua = { version = "0.10", features = ["lua54", "vendored"] }

[dependencies]
client = { path = "client" }

[build-dependencies]
schema = { path = "schema" }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
debug = true
