[workspace]
members = [
    "schema",
    "server",
    "utils",
    "utils-client",
    "proc-macros",
    "client",
    "node-build-utils",
    "disco-server",
]

[workspace.package]
version = "2.0.0"
edition = "2024"

[package]
name = "arena-of-ideas"
version.workspace = true
edition.workspace = true

[features]
dynamic_linking = ["client/dynamic_linking"]


[workspace.dependencies]
spacetimedb = "1.6.0"
bevy = { version = "0.17", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_audio",
    "vorbis",
    "multi_threaded",
    "file_watcher",
    "bevy_ui",
    "default_font",
    "x11",
    "bevy_state",
    "bevy_log",
] }
spacetimedb-sdk = "1.6.0"
spacetimedb-sats = "1.6.0"
spacetimedb-lib = "1.6.0"
strum = "0.27.2"
strum_macros = "0.27.2"
itertools = "0.14.0"
ron = "0.11.0"
serde = "1"
include_dir = "0.7.4"
thiserror = "2.0.17"
convert_case = "0.8.0"
bevy-trait-query = "0.17.1"
once_cell = "1.21.3"
bevy_egui = { version = "0.38", default-features = false, features = [
    "serde",
    "open_url",
    "render",
    "immutable_ctx",
] }
ecolor = { version = "0.33.0", features = ["color-hex", "serde"] }
lerp = "0.5.0"
indexmap = { version = "2.12.0", features = ["serde"] }
colored = "3.0.0"
chrono = { version = "0.4.42", default-features = false, features = [
    "alloc",
    "std",
    "now",
] }
egui_extras = { version = "0.33.0", features = ["svg"] }
egui-notify = "0.21.0"
egui_tiles = "0.14.0"
humanize-duration = "0.0.7"
parking_lot = "0.12.5"
syn = "2.0.108"
darling = "0.21.3"
proc-macro2 = "1.0.103"
quote = "1.0.41"
prettyplease = "0.2"
tween = "2.1.0"
arboard = "3.6.1"
log = "0.4.28"
glam = { version = "0.30.9", features = ["serde"] }
rand = "0.10.0-rc.0"
rand_chacha = "0.9.0"
color-hex = "0.2.0"

bimap = { version = "0.6.3", features = ["serde"] }
backtrace = "0.3.76"
mlua = { version = "0.11.4", features = ["lua54", "vendored"] }

[dependencies]
client = { path = "client" }

[build-dependencies]
schema = { path = "schema" }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
debug = true
