[package]
name = "client"
version.workspace = true
edition.workspace = true

[features]
dynamic_linking = ["bevy/dynamic_linking"]
trace_tracy = ["bevy/trace_tracy"]

[dependencies]
utils = { path = "../utils" }
schema = { path = "../schema" }
utils-client = { path = "../utils-client" }
proc-macros = { path = "../proc-macros" }

spacetimedb-sdk = { workspace = true }
spacetimedb-sats = { workspace = true }
spacetimedb-lib = { workspace = true }
bevy = { workspace = true, features = [] }
bevy-trait-query = { workspace = true }
bevy_egui = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
include_dir = { workspace = true }
thiserror = { workspace = true }
convert_case = { workspace = true }
once_cell = { workspace = true }
ecolor = { workspace = true }
lerp = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
egui_extras = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
parking_lot = { workspace = true }
tween = { workspace = true }
color-hex = { workspace = true }
egui_tiles = { workspace = true }
egui-notify = { workspace = true }
epaint_default_fonts = { workspace = true }


backtrace = { workspace = true }
mlua = { workspace = true }
rhai = { workspace = true }
egui_code_editor = "0.2.20"

anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
hex = "0.4.3"
home = "0.5.12"
egui_commonmark = "0.22.0"
bevy_tasks = "0.17.2"
regex = "1.12.2"
bevy_http_client = "0.9.0"
open = "5.3.2"

[dependencies.winit]
version = "0.30.12"
features = ["default"]

[build-dependencies]
node-build-utils = { path = "../node-build-utils" }
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = { workspace = true }
