[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
extra-macros = { path = "../extra-macros" }
utils = { path = "../utils" }
ui = { path = "../ui" }
bevy = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
include_dir = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
convert_case = { workspace = true }
bevy-trait-query = { workspace = true }
once_cell = { workspace = true }
bevy_egui = { workspace = true }
