[package]
name = "disco-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
oauth2 = "5.0.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.224", features = ["derive"] }
spacetimedb-sdk = "1.3.2"
tokio = { version = "1.47.1", features = ["full"] }
