[package]
name = "disco-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
dotenvy = "0.15.7"
oauth2 = "5.0.0"
rand = "0.9.2"                                         # workspace version breaks
reqwest = { version = "0.12.24", features = ["json"] }
serde = { workspace = true }
tokio = { version = "1.47.2", features = ["full"] }
