[package]
name = "extra"
version.workspace = true
edition.workspace = true

[dependencies]
extra-macros = { path = "../extra-macros" }
bevy = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
include_dir = { workspace = true }
itertools = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
