[package]
name = "macro-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
schema = { path = "../schema" }
macro-schema = { path = "../macro-schema" }
itertools = { workspace = true }
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.89"
