[package]
name = "node-loaders"
version.workspace = true
edition.workspace = true

[features]
default = []
client = []
server = ["spacetimedb"]

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
schema = { path = "../schema" }

[dependencies.spacetimedb]
workspace = true
optional = true

[build-dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
schema = { path = "../schema" }
