[package]
name = "nodes-client"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
macro-schema = { path = "../macro-schema" }
macro-client = { path = "../macro-client" }
schema = { path = "../schema" }
utils = { path = "../utils" }
ui = { path = "../ui" }
utils-client = { path = "../utils-client" }
bevy = { workspace = true }
bevy-trait-query = { workspace = true }
bevy_egui = { workspace = true }
include_dir = { workspace = true }
itertools = { workspace = true }
ron = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
darling = "0.20.10"
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = "2.0.89"
