[package]
name = "nodes-client"
version.workspace = true
edition.workspace = true



[dependencies]
raw-nodes = { path = "../raw-nodes" }
serde = { workspace = true, features = ["derive"] }

[build-dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
