[package]
name = "nodes-example"
version.workspace = true
edition.workspace = true

[dependencies]
nodes = { path = "../nodes" }
nodes-client = { path = "../nodes-client" }
nodes-server = { path = "../nodes-server" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
