[package]
name = "nodes-server"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
macro-schema = { path = "../macro-schema" }
macro-server = { path = "../macro-server" }
schema = { path = "../schema" }
itertools = { workspace = true }
ron = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
