[package]
name = "nodes-server"
version.workspace = true
edition.workspace = true



[dependencies]
nodes = { path = "../nodes" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
