[package]
name = "raw-nodes-v2"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }
proc-macros = { path = "../proc-macros" }

[build-dependencies]
node-build-utils = { path = "../node-build-utils" }
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
