[package]
name = "schema"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
ron = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
ecolor = { workspace = true }
backtrace = { workspace = true }
