[package]
name = "schema"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true, features = ["derive"] }
rhai = { version = "1.19", features = ["serde", "sync"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
anyhow = "1.0"
itertools = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
ron = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
ecolor = { workspace = true }

proc-macros = { path = "../proc-macros" }

[build-dependencies]
itertools = { workspace = true }
node-build-utils = { path = "../node-build-utils" }
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
