[package]
name = "server-v2"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
raw-nodes-v2 = { path = "../raw-nodes-v2" }
schema-v2 = { path = "../schema-v2" }
server = { path = "../server" }
spacetimedb = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
anyhow = "1.0"
thiserror = "1.0"

[build-dependencies]
itertools = { workspace = true }
node-build-utils = { path = "../node-build-utils" }
syn = { workspace = true }
quote = "1.0"
proc-macro2 = "1.0"
