[package]
name = "server"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
schema = { path = "../schema" }
utils = { path = "../utils", features = ["server"] }
node-loaders = { path = "../node-loaders", features = ["server"] }
spacetimedb = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
glam = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
anyhow = "1.0"
log = "0.4"
itertools = { workspace = true }
hex = "0.4.3"
rand = { version = "0.8.5", default-features = false }
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
bcrypt-no-getrandom = "0.16.0"

[build-dependencies]
schema = { path = "../schema" }
node-loaders = { path = "../node-loaders" }
node-build-utils = { path = "../node-build-utils" }
syn = { workspace = true, features = ["full", "parsing"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
itertools = { workspace = true }
prettyplease = { workspace = true }
