[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
utils = { path = "../utils" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
ecolor = { workspace = true }
lerp = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
egui_extras = { workspace = true }

color-hex = "0.2.0"
