[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
schema = { path = "../schema" }
utils = { path = "../utils" }
utils-client = { path = "../utils-client" }
raw-nodes = { path = "../raw-nodes" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
ecolor = { workspace = true }
lerp = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }
once_cell = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
egui_extras = { workspace = true }
parking_lot = { workspace = true }
color-hex = { workspace = true }
serde = { workspace = true }
convert_case = { workspace = true }
egui-notify = { workspace = true }
egui_colors = { workspace = true }
egui_double_slider = { workspace = true }
spacetimedb-sdk = { workspace = true }
log = { workspace = true }
