[package]
name = "utils"
version.workspace = true
edition.workspace = true

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
humanize-duration = { workspace = true }
