[package]
name = "utils"
version.workspace = true
edition.workspace = true

[features]
server = []

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
itertools = { workspace = true }
humanize-duration = { workspace = true }
spacetimedb = { workspace = true }
