[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
dioxus = { version = "0.6", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Element",
    "Performance",
] }
wasm-bindgen = "0.2"
gloo-timers = { version = "0.3", features = ["futures"] }
